# validated-descriptor

./: .gitignore  mypy.ini  pyproject.toml  validateddescriptor.py
tests/: test_validateddescriptor.py
validateddescriptor/: __init__.py  validated_descriptor.py  validateddescriptor.py
