[tool.poetry]
name = "validateddescriptor"
version = "1.0.1"
description = "Class used as an alternative to setter methods that validate inputs."
authors = ["Moussa Mikhail <moussamikhail56@gmail.com>"]
license = "MIT"
packages = [
	{ include = "validateddescriptor" }
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
mypy = "^0.942"
pylint = "^2.13.5"
flake8 = "^4.0.1"
flake8-comprehensions = "^3.8.0"
flake8-bugbear = "^22.3.23"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
